--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <header>
-            <h1>Study Group</h1>
+            <h1>MYEO</h1>
         </header>
         <section class="banner">
             <img src="img/banner.jpg" alt="Banner image">
@@ -15,7 +15,7 @@
         </section>
         <nav class="main-nav">
             <ul>
-                <li><a href="#" class="join">Join the group</a></li>
+                <li><a href="#" class="joinlink">Join Us</a></li>
                 <li><a href="#">Articles</a></li>
                 <li><a href="#">Courses</a></li>
                 <li><a href="#">Contact</a></li>
@@ -27,10 +27,10 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore aut perferendis vero fugiat sit ad sapiente assumenda inventore autem, totam nostrum possimus consectetur harum aliquam veniam unde animi ipsum explicabo!</p>
                 <ul class="images">
                     <li>
-                        <img src="img/pic1.jpg">
+                        <img src="img/pic3.jpg">
                     </li>
                     <li>
-                        <img src="img/pic2.jpg">
+                        <img src="img/pic4.jpg">
                     </li>
                 </ul>
             </article>
@@ -39,7 +39,7 @@
             <h2>Join Today!</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod praesentium facilis modi et veniam impedit quisquam ad quos! Tempora rerum perferendis recusandae veniam quod, exercitationem animi. Repudiandae porro eos reprehenderit!</p>
             <form>
-                <input type="email" name="email" id="email" placeholder="Your email address and enter" required>
+                <input type="email" name="email" id="email" placeholder="abc@email.com" required>
             </form>
         </section>
         <footer>
